<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WorkDeck">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="368dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="9dp"
        android:contentDescription="@string/shiftend"
        app:layout_constraintBottom_toTopOf="@+id/hourlyrate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/shiftstart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/companyName"
        app:srcCompat="@android:drawable/ic_lock_idle_alarm" />

    <EditText
        android:id="@+id/companyName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_your_work_name"
        android:inputType="textShortMessage|textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="27dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="63dp"
        android:layout_marginBottom="55dp"
        android:contentDescription="@string/shiftstart"
        app:layout_constraintBottom_toBottomOf="@+id/hourlyrate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/companyName"
        app:srcCompat="@android:drawable/ic_lock_idle_alarm" />

    <EditText
        android:id="@+id/shiftstart"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="173dp"
        android:autofillHints=""
        android:hint="@string/hh_mm"
        android:inputType="time"
        android:text="@string/shift_start"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <EditText
        android:id="@+id/shiftend"
        android:layout_width="165dp"
        android:layout_height="48dp"
        android:elegantTextHeight="true"
        android:hint="@string/hh_mm"
        android:inputType="time"
        android:text="@string/shift_end"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/shiftstart"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/shiftstart"
        app:layout_constraintTop_toTopOf="@+id/shiftstart"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/hourlyrate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="19dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:text="@string/hourlyrate"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginEnd="11dp"
        android:contentDescription="@string/tips_recieved"
        app:layout_constraintBottom_toBottomOf="@+id/hourlyrate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/hourlyrate"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/shiftstart"
        app:srcCompat="@android:drawable/btn_star_big_on"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/tips"
        android:layout_width="153dp"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:text="@string/tips"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/shiftstart"
        app:layout_constraintTop_toTopOf="@+id/hourlyrate"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="363dp"
        android:onClick="onclickSave"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hourlyrate" />

</android.support.constraint.ConstraintLayout>